Fixed wrapping of long list title

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,5 @@
 
 ul {
   padding: 0;
+  list-style-type: none;
 }
