--- a/src/components/Nav-Level/Nav-Level.css
+++ b/src/components/Nav-Level/Nav-Level.css
@@ -1,5 +1,6 @@
 .nav-level {
   width: fit-content;
+  white-space: nowrap;
 }
 
 .nav-level__list {
@@ -8,24 +9,20 @@
   overflow: hidden;
 }
 
-.nav-level_active > .nav-level__list {
-  height: fit-content;
-  width: max-content;
-}
-
 .nav-level__title {
+  white-space: wrap;
   cursor: pointer;
   display: inline-block;
-  word-break: break-all;
 }
+
 .nav-level__title_active {
   color: blueviolet;
 }
 
 .nav-level__arrow {
+  vertical-align: top;
+  margin-top: 5px;
   display: inline-block;
-  width: 0;
-  height: 0;
   border: 5px solid transparent;
   border-left: 5px solid #000;
   transition: transform 0.2s ease;
